--- a/t/10_responses/sns-get-subscription-attributes.xml.test.yml
+++ b/t/10_responses/sns-get-subscription-attributes.xml.test.yml
@@ -4,10 +4,10 @@ service: SNS
 tests:
   - expected: '{"healthyRetryPolicy":{"numRetries":10}}'
     op: eq
-    path: Attributes.DeliveryPolicy
+    path: Attributes.Map.DeliveryPolicy
   - expected: 123456789012
     op: eq
-    path: Attributes.Owner
+    path: Attributes.Map.Owner
   - expected: arn:aws:sns:us-east-1:123456789012:My-Topic:80289ba6-0fd4-4079-afb4-ce8c8260f0ca
     op: eq
-    path: Attributes.SubscriptionArn
+    path: Attributes.Map.SubscriptionArn
