--- a/t/10_responses/sns-get-topic-attributes.xml.test.yml
+++ b/t/10_responses/sns-get-topic-attributes.xml.test.yml
@@ -4,12 +4,12 @@ service: SNS
 tests:
   - expected: 123456789012
     op: eq
-    path: Attributes.Owner
+    path: Attributes.Map.Owner
   - expected: |-
       {
       "Version":"2008-10-17","Id":"us-east-1/698519295917/test__default_policy_ID","Statement" : [{"Effect":"Allow","Sid":"us-east-1/698519295917/test__default_statement_ID","Principal" : {"AWS": "*"},"Action":["SNS:GetTopicAttributes","SNS:SetTopicAttributes","SNS:AddPermission","SNS:RemovePermission","SNS:DeleteTopic","SNS:Subscribe","SNS:ListSubscriptionsByTopic","SNS:Publish","SNS:Receive"],"Resource":"arn:aws:sns:us-east-1:698519295917:test","Condition" : {"StringLike" : {"AWS:SourceArn": "arn:aws:*:*:698519295917:*"}}}]}
     op: eq
-    path: Attributes.Policy
+    path: Attributes.Map.Policy
   - expected: arn:aws:sns:us-east-1:123456789012:My-Topic
     op: eq
-    path: Attributes.TopicArn
+    path: Attributes.Map.TopicArn
