Make t/10_reponses path resolving to support keys with dots
Also get SES tests to pass

--- a/t/10_responses/ses-get-identity-verification-attributes.xml.test.yml
+++ b/t/10_responses/ses-get-identity-verification-attributes.xml.test.yml
@@ -4,10 +4,10 @@ service: SES
 tests:
   - expected: Pending
     op: eq
-    path: VerificationAttributes.domain\\.com.VerificationStatus
+    dpath: /VerificationAttributes/Map/domain.com/VerificationStatus
   - expected: QTKknzFg2J4ygwa+XvHAxUl1hyHoY0gVfZdfjIedHZ0=
     op: eq
-    path: VerificationAttributes.domain\\.com.VerificationToken
+    dpath: /VerificationAttributes/Map/domain.com/VerificationToken
   - expected: Pending
     op: eq
-    path: VerificationAttributes.user@domain\\.com.VerificationStatus
+    dpath: /VerificationAttributes/Map/user@domain.com/VerificationStatus
