--- a/t/10_responses/ses-get-identity-dkim-attributes.xml.test.yml
+++ b/t/10_responses/ses-get-identity-dkim-attributes.xml.test.yml
@@ -4,16 +4,16 @@ service: SES
 tests:
   - expected: 1
     op: eq
-    path: DkimAttributes.amazon\\.com.DkimEnabled
+    path: DkimAttributes.Map.{amazon.com}.DkimEnabled
   - expected: vvjuipp74whm76gqoni7qmwwn4w4qusjiainivf6f
     op: eq
-    path: DkimAttributes.amazon\\.com.DkimTokens.0
+    path: DkimAttributes.Map.{amazon.com}.DkimTokens.0
   - expected: 3frqe7jn4obpuxjpwpolz6ipb3k5nvt2nhjpik2oy
     op: eq
-    path: DkimAttributes.amazon\\.com.DkimTokens.1
+    path: DkimAttributes.Map.{amazon.com}.DkimTokens.1
   - expected: wrqplteh7oodxnad7hsl4mixg2uavzneazxv5sxi2
     op: eq
-    path: DkimAttributes.amazon\\.com.DkimTokens.2
+    path: DkimAttributes.Map.{amazon.com}.DkimTokens.2
   - expected: Success
     op: eq
-    path: DkimAttributes.amazon\\.com.DkimVerificationStatus
+    path: DkimAttributes.Map.{amazon.com}.DkimVerificationStatus
