--- a/t/10_responses/ses-get-identity-notification-attributes.xml.test.yml
+++ b/t/10_responses/ses-get-identity-notification-attributes.xml.test.yml
@@ -2,12 +2,12 @@
 call: GetIdentityNotificationAttributes
 service: SES
 tests:
-  - expected: arn:aws:sns:us-east-1:123456789012:example
+  - expected: arn:aws:sns:us-east-1:123456789012:examplebounce
     op: eq
-    path: NotificationAttributes.user@example\\.com.BounceTopic
-  - expected: arn:aws:sns:us-east-1:123456789012:example
+    path: NotificationAttributes.Map.{user@example.com}.BounceTopic
+  - expected: arn:aws:sns:us-east-1:123456789012:examplecomplaint
     op: eq
-    path: NotificationAttributes.user@example\\.com.ComplaintTopic
+    path: NotificationAttributes.Map.{user@example.com}.ComplaintTopic
   - expected: 1
     op: eq
-    path: NotificationAttributes.user@example\\.com.ForwardingEnabled
+    path: NotificationAttributes.Map.{user@example.com}.ForwardingEnabled
