--- a/t/10_responses/iam-get-user-policy.xml.test.yml
+++ b/t/10_responses/iam-get-user-policy.xml.test.yml
@@ -4,22 +4,22 @@ service: IAM
 tests:
   - expected: ec2:CreateSnapshot
     op: eq
-    path: PolicyDocument.Statement.0.Action.0
+    path: Policy.Statement.0.Action.0
   - expected: ec2:DescribeInstances
     op: eq
-    path: PolicyDocument.Statement.0.Action.1
+    path: Policy.Statement.0.Action.1
   - expected: ec2:DescribeVolumes
     op: eq
-    path: PolicyDocument.Statement.0.Action.2
+    path: Policy.Statement.0.Action.2
   - expected: Allow
     op: eq
-    path: PolicyDocument.Statement.0.Effect
+    path: Policy.Statement.0.Effect
   - expected: '*'
     op: eq
-    path: PolicyDocument.Statement.0.Resource
+    path: Policy.Statement.0.Resource
   - expected: Stmt1331504410389
     op: eq
-    path: PolicyDocument.Statement.0.Sid
+    path: Policy.Statement.0.Sid
   - expected: test
     op: eq
     path: PolicyName
