Commit dist.ini that builds the dist

--- a/dist.ini
+++ b/dist.ini
@@ -5,14 +5,24 @@ copyright_holder = Jose Luis Martinez
 copyright_year = 2014
 version = 0.01
 
+[Git::GatherDir]
+exclude_match=auto-lib
+exclude_match=botocore
+exclude_match=aws-sdk-core-ruby
+exclude_match=aws-sdk-js
+exclude_match=aws-sdk-php
+
+[ExecDir]
+[GatherDir]
+root = auto-lib
+prefix = lib
+
+[MakeMaker]
+
 [@Git]
 allow_dirty = dist.ini
 allow_dirty = Changes
 allow_dirty = README
-
-[@Filter]
--bundle = @Basic
--remove = Readme
 
 [Prereqs::FromCPANfile]
 
