repository for META.*

--- a/dist.ini
+++ b/dist.ini
@@ -24,3 +24,7 @@ allow_dirty = README
 
 [Prereqs::FromCPANfile]
 
+[MetaResources]
+repository.web = https://github.com/pplu/aws-sdk-perl
+repository.url = https://github.com/pplu/aws-sdk-perl.git
+repository.type = git
