--- a/dist.ini
+++ b/dist.ini
@@ -28,3 +28,5 @@ allow_dirty = README
 repository.web = https://github.com/pplu/aws-sdk-perl
 repository.url = https://github.com/pplu/aws-sdk-perl.git
 repository.type = git
+bugtracker.web = https://github.com/pplu/aws-sdk-perl/issues
+
