--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ version = 0.06
 exclude_match=auto-lib
 exclude_match=builder-lib
 exclude_match=botocore
+exclude_match=Makefile
 
 [ExecDir]
 [GatherDir]
