Add META.yml generation

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,8 @@ allow_dirty = README
 
 [Prereqs::FromCPANfile]
 
+[MetaYAML]
+
 [MetaResources]
 repository.web = https://github.com/pplu/aws-sdk-perl
 repository.url = https://github.com/pplu/aws-sdk-perl.git
