Add Licensing information to distribution and readme

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name = Paws
 author = Jose Luis Martinez <jlmartinez@capside.com>
-license = Perl_5
+license = LGPL_3_0
 copyright_holder = Jose Luis Martinez
 copyright_year = 2014
 version = 0.07
@@ -33,3 +33,4 @@ repository.url = https://github.com/pplu/aws-sdk-perl.git
 repository.type = git
 bugtracker.web = https://github.com/pplu/aws-sdk-perl/issues
 
+[License]
