--- a/t/10_responses/iam-list-users.response.test.yml
+++ b/t/10_responses/iam-list-users.response.test.yml
@@ -2,34 +2,36 @@
 call: ListUsers
 service: IAM
 tests:
+  - expected: User1
+    op: eq
+    path: Users.0.UserName
+  - expected: AIDAAAAAAAAAAAAAAAAAA
+    op: eq
+    path: Users.0.UserId
+  - expected: 2015-05-15T17:00:00Z
+    op: eq
+    path: Users.0.CreateDate
+  - expected: /
+    op: eq
+    path: Users.0.Path
+  - expected: arn:aws:iam::000000000000:user/User1
+    op: eq
+    path: Users.0.Arn
+  - expected: user2
+    op: eq
+    path: Users.1.UserName
+  - expected: AIDAAAAAAAAAAAAAAAAAB
+    op: eq
+    path: Users.1.UserId
+  - expected: arn:aws:iam::000000000000:user/user2
+    op: eq
+    path: Users.1.Arn
+  - expected: /
+    op: eq
+    path: Users.1.Path
+  - expected: 2013-01-17T10:00:00Z
+    op: eq
+    path: Users.1.CreateDate
   - expected: 0
     op: eq
     path: IsTruncated
-  - expected: |-
-      arn:aws:iam::123456789012:user
-                  /division_abc/subdivision_xyz/engineering/Andrew
-    op: eq
-    path: Users.0.Arn
-  - expected: /division_abc/subdivision_xyz/engineering/
-    op: eq
-    path: Users.0.Path
-  - expected: AID2MAB8DPLSRHEXAMPLE
-    op: eq
-    path: Users.0.UserId
-  - expected: Andrew
-    op: eq
-    path: Users.0.UserName
-  - expected: |-
-      arn:aws:iam::123456789012:user
-                  /division_abc/subdivision_xyz/engineering/Jackie
-    op: eq
-    path: Users.1.Arn
-  - expected: /division_abc/subdivision_xyz/engineering/
-    op: eq
-    path: Users.1.Path
-  - expected: AIDIODR4TAW7CSEXAMPLE
-    op: eq
-    path: Users.1.UserId
-  - expected: Jackie
-    op: eq
-    path: Users.1.UserName
