Add upload to CPAN in Dist::Zilla

--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,8 @@ allow_dirty = README
 
 [MetaYAML]
 
+[UploadToCPAN]
+
 [MetaResources]
 repository.web = https://github.com/pplu/aws-sdk-perl
 repository.url = https://github.com/pplu/aws-sdk-perl.git
