--- a/dist.ini
+++ b/dist.ini
@@ -29,7 +29,7 @@ allow_dirty = README
 
 [MetaYAML]
 
-[UploadToCPAN]
+[%PAUSE]
 
 [MetaResources]
 repository.web = https://github.com/pplu/aws-sdk-perl
