--- a/t/10_responses/ses-get-identity-verification-attributes.response.test.yml
+++ b/t/10_responses/ses-get-identity-verification-attributes.response.test.yml
@@ -4,10 +4,7 @@ service: SES
 tests:
   - expected: Pending
     op: eq
-    dpath: /VerificationAttributes/Map/domain.com/VerificationStatus
+    path: VerificationAttributes.Map.{domain.com}.VerificationStatus
   - expected: QTKknzFg2J4ygwa+XvHAxUl1hyHoY0gVfZdfjIedHZ0=
     op: eq
-    dpath: /VerificationAttributes/Map/domain.com/VerificationToken
-  - expected: Pending
-    op: eq
-    dpath: /VerificationAttributes/Map/user@domain.com/VerificationStatus
+    path:  VerificationAttributes.Map.{domain.com}.VerificationToken
