Tests for DynamoDB

--- a/t/10_responses/dynamodb-getitem.response.test.yml
+++ b/t/10_responses/dynamodb-getitem.response.test.yml
@@ -4,4 +4,7 @@ service: DynamoDB
 tests:
   - expected: amqp://rabbitmq.company.com
     op: eq
-    path: Item.Map.{S#celery.broker_url}.S
+    path: Item.Map.value.S
+  - expected: celery.broker_url
+    op: eq
+    path: Item.Map.name.S
