include META.json, the modern metafile format, in the distribution

--- a/dist.ini
+++ b/dist.ini
@@ -28,6 +28,7 @@ allow_dirty = README
 [Prereqs::FromCPANfile]
 
 [MetaYAML]
+[MetaJSON]
 
 [MetaResources]
 repository.web = https://github.com/pplu/aws-sdk-perl
