--- a/dist.ini
+++ b/dist.ini
@@ -37,3 +37,17 @@ repository.type = git
 bugtracker.web = https://github.com/pplu/aws-sdk-perl/issues
 
 [License]
+
+[RunExtraTests]
+[TestRelease]
+[PodSyntaxTests]
+
+[FileFinder::ByName / Examples]
+dir = examples
+
+[Test::Compile]
+:version = 2.039
+bail_out_on_fail = 1
+xt_mode = 1
+script_finder = :ExecFiles
+script_finder = Examples
