--- a/t/10_responses/logs-describelogstreams.response.test.yml
+++ b/t/10_responses/logs-describelogstreams.response.test.yml
@@ -4,19 +4,19 @@ service: CloudWatchLogs
 tests:
   - expected: test_stream_name
     op: eq
-    path: logStreams.0.logStreamName
+    path: LogStreams.0.LogStreamName
   - expected: 1431554069632
     op: eq
-    path: logStreams.0.lastIngestionTime
+    path: LogStreams.0.LastIngestionTime
   - expected: 0
     op: eq
-    path: logStreams.0.storedBytes
+    path: LogStreams.0.StoredBytes
   - expected: 49545729768044048309158352465459424171909606459303791266
     op: eq
-    path: logStreams.0.uploadSequenceToken
+    path: LogStreams.0.UploadSequenceToken
   - expected: arn:aws:logs:eu-west-1:000000000000:log-group:test_log_group:log-stream:test_stream_name
     op: eq
-    path: logStreams.0.arn
+    path: LogStreams.0.Arn
   - expected: 1431545388246
     op: eq
-    path: logStreams.0.creationTime
+    path: LogStreams.0.CreationTime
