--- a/t/10_responses/logs-getlogevents.response.test.yml
+++ b/t/10_responses/logs-getlogevents.response.test.yml
@@ -4,7 +4,7 @@ service: CloudWatchLogs
 tests:
   - expected: b/32078235137974283558538556067731051541562410408704212992
     op: eq
-    path: nextBackwardToken
+    path: NextBackwardToken
   - expected: f/32078235137974283558538556067731051541562410408704212992
     op: eq
-    path: nextForwardToken
+    path: NextForwardToken
