--- a/t/10_responses/logs-filterlogevents.response.test.yml
+++ b/t/10_responses/logs-filterlogevents.response.test.yml
@@ -4,7 +4,7 @@ service: CloudWatchLogs
 tests:
   - expected: 1
     op: eq
-    path: searchedLogStreams.0.searchedCompletely
+    path: SearchedLogStreams.0.SearchedCompletely
   - expected: test_stream_name
     op: eq
-    path: searchedLogStreams.0.logStreamName
+    path: SearchedLogStreams.0.LogStreamName
