--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name = Paws
 author = Jose Luis Martinez <jlmartinez@capside.com>
-license = LGPL_3_0
+license = Apache_2_0
 copyright_holder = Jose Luis Martinez
 copyright_year = 2014
 main_module = lib/Paws.pm
