--- a/dist.ini
+++ b/dist.ini
@@ -48,3 +48,14 @@ bugtracker.web = https://github.com/pplu/aws-sdk-perl/issues
 dir = examples
 
 [Manifest]
+
+[Git::Check / initial check]
+allow_dirty =
+
+[Git::Tag]
+tag_format  = release-%v
+
+[Git::Push]
+
+[ConfirmRelease]
+[UploadToCPAN]
