Change to StaticInstall as per @Grinz comments on #239
- had to exclude gen_classes.pl because StaticInstall doesn't like it (it's not needed anyways)

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,7 @@ main_module = lib/Paws.pm
 [VersionFromMainModule]
 
 [Git::GatherDir]
+exclude_match=gen_classes.pl
 exclude_match=auto-lib
 exclude_match=builder-lib
 exclude_match=botocore
@@ -30,8 +31,8 @@ allow_dirty = README
 
 [Prereqs::FromCPANfile]
 
-[ModuleBuildTiny]
-static = yes
+[StaticInstall]
+mode = on
 
 [MetaYAML]
 [MetaJSON]
