Clean up some files that shouldn't be in the dist

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,11 @@ main_module = lib/Paws.pm
 [VersionFromMainModule]
 
 [Git::GatherDir]
+exclude_match=old_t
+exclude_match=gen_classes.pl
+exclude_match=TODO
+exclude_match=TODO_in_branch
+exclude_match=templates
 exclude_match=auto-lib
 exclude_match=builder-lib
 exclude_match=botocore
