use Module::Build::Tiny as installer (#239)

--- a/dist.ini
+++ b/dist.ini
@@ -22,11 +22,12 @@ exclude_match=Makefile
 exclude_match=LICENSE
 
 [ExecDir]
+dir = script
 [GatherDir]
 root = auto-lib
 prefix = lib
 
-[MakeMaker]
+[ModuleBuildTiny::Fallback]
 
 [@Git]
 allow_dirty = dist.ini
