S3 changes added in correct code and status and https status and tests for changes

--- a/t/10_responses/s3-copy-object.2.response.test.yml
+++ b/t/10_responses/s3-copy-object.2.response.test.yml
@@ -7,8 +7,11 @@ tests:
     expected: C535DE4BB867ECF3
   - path: message
     op: eq
-    expected: Not Found
+    expected: The specified key does not exist. 
   - path: code
+    op: eq
+    expected: NoSuchKey
+  - path: http_status
     op: eq
     expected: 404
 
