--- a/t/10_responses/s3-get-object.2.response.test.yml
+++ b/t/10_responses/s3-get-object.2.response.test.yml
@@ -7,7 +7,10 @@ tests:
     expected: E4845140F3F4C4AB
   - path: message
     op: eq
-    expected: Not Found
+    expected: The specified key does not exist.
   - path: code
+    op: eq
+    expected: NoSuchKey
+  - path: http_status
     op: eq
     expected: 404
