Revert "S3 todo cleanup"

--- a/t/10_responses/s3-get-bucket-location.response.test.yml
+++ b/t/10_responses/s3-get-bucket-location.response.test.yml
@@ -1,7 +1,8 @@
 ---
+todo: 'S3 is not stable'
 call: GetBucketLocation
 service: S3
 tests:
-  - expected: EU 
+  - expected: EU
     op: eq
     path: LocationConstraint
