--- a/t/10_responses/s3-get-bucket-policy.response.test.yml
+++ b/t/10_responses/s3-get-bucket-policy.response.test.yml
@@ -1,4 +1,7 @@
 ---
-todo: test not completed
 call: GetBucketPolicy
 service: S3
+tests:
+  - expected: {"Version":"2012-10-17","Statement":[{"Sid":"AddPerm","Effect":"Allow","Principal":"*","Action":"s3:GetObject","Resource":"arn:aws:s3:::bucket-name/*"}]}
+    op: eq
+    path: Policy
