--- a/t/09_requests/s3-get-bucket-policy-status.request.test.yml
+++ b/t/09_requests/s3-get-bucket-policy-status.request.test.yml
@@ -1,27 +1,19 @@
 ---
-call: GetBucketlifecyckeConfiguration 
+call: GetBucketPolicyStatus 
 service: S3
 tests:
   - expected: oneoffpaws 
     op: eq
     path: parameters
     key: Bucket
-  - expected: ImportantBlueDocuments
-    op: eq
-    path: parameters
-    key: Id
   - expected: GET 
     op: eq
     path: method
   - expected: https://s3.fake_region.amazonaws.com/oneoffpaws?
     path: url
-  - expected: lifecycle
-    path: url
-  - expected: Id=ImportantBlueDocuments
-    path: url       
-  - expected: lifecycle=
+  - expected: policyStatus 
     path: uri
-  - expected: Id=ImportantBlueDocuments
+  - expected: policyStatus 
     path: uri
   - expected: /oneoffpaws?
     path: uri
